<resources>
    <string name="app_name">News</string>
    <string name="tab_news">news</string>
    <string name="tab_data">data</string>
    <string name="tab_graph">graph</string>
    <string name="tab_scholar">scholar</string>
    <string name="tab_user">user</string>
    <string name="tab_cluster">cluster</string>
    <string name="top_tab_all">all</string>
    <string name="top_tab_news">news</string>
    <string name="top_tab_paper">paper</string>
    <string name="top_tab_plus">+</string>
    <string name="top_tab_cross">x</string>
    <string name="tab_edit_selected">selected</string>
    <string name="tab_edit_unselected">unselected</string>
    <string name="btn_like">like</string>
    <string name="btn_collect">collect</string>
    <string name="btn_wb">share</string>
    <string name="btn_wx">wechat</string>
    <string name="user_history">我的足迹</string>
    <string name="place">Place</string>
    <string name="confirmed">Confirmed</string>
    <string name="cured">Cured</string>
    <string name="dead">Dead</string>
    <string name="suspected">Suspected</string>
    <string name="todo">TODO</string>
    <string name="search_query_hint">请输入关键字</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="cluster_1">研究</string>
    <string name="cluster_2">风险</string>
    <string name="cluster_3">临床</string>
    <string name="cluster_4">免疫</string>
    <string name="cluster_5">疫苗</string>
    <string name="cluster_6">基因</string>

<!--    <string name="app_name">Profile Interface</string>-->
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="title_following">知疫学者</string>
    <string name="toolbar_bio">Bio</string>
    <string name="toolbar_details">Details</string>
    <string name="image">Image</string>
    <string name="entity">实体</string>
    <string name="History">History</string>
    <string name="img">img</string>
    <string name="exit">残忍退出</string>
    <string name="choose_continue">继续逛逛</string>
    <string name="waht">要不再瞧瞧,说不定有新发现哦~</string>
    <string name="emmm">爷,要走了吗~⊙﹏⊙</string>
</resources>
