<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/data_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.java.jingjia.ui.MainActivity">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yd_blue"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/data_item_place"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="start"
            android:padding="4dp"
            android:text="@string/place"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/data_item_confirmed"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirmed"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/data_item_suspected"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/suspected"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/data_item_cured"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cured"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/data_item_dead"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dead"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <ExpandableListView
        android:id="@+id/exlist_lol"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:childDivider="@color/yd_blue"/>
</LinearLayout>