<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/news_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textSize="20sp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/news_page_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="12sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/news_page_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="12sp"
        android:padding="8dp"/>

    <LinearLayout
        android:id="@+id/news_page_content"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:padding="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">
        <Button
            android:id="@+id/news_page_btn_like"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_like"
            android:layout_margin="4dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/news_page_btn_collect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_collect"
            android:layout_margin="4dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/news_page_btn_wb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_wb"
            android:layout_margin="4dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/news_page_btn_wx"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_wx"
            android:layout_margin="4dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>