<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/all_news_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/transparent"
            android:text="@string/History"
            android:visibility="visible" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/all_news_sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/view_search"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_query_hint">

        </androidx.appcompat.widget.SearchView>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/all_news_tabs"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:padding="4dp" />

        <Button
            android:id="@+id/all_news_edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/top_tab_plus"
            android:background="@null" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/all_news_vp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>