<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/main_fl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/tabs_rg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <RadioGroup
            android:id="@+id/tabs_rg"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/yd_blue"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <RadioButton
                android:id="@+id/tab_news"
                android:text="@string/tab_news"
                android:textSize="16sp"
                android:textColor="@drawable/tab_text"
                android:background="@drawable/tab_background"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:button="@null" />

            <RadioButton
                android:id="@+id/tab_data"
                android:text="@string/tab_data"
                android:textSize="16sp"
                android:textColor="@drawable/tab_text"
                android:background="@drawable/tab_background"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:button="@null" />

            <RadioButton
                android:id="@+id/tab_scholar"
                android:text="@string/tab_scholar"
                android:textSize="16sp"
                android:textColor="@drawable/tab_text"
                android:background="@drawable/tab_background"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:button="@null" />

            <RadioButton
                android:id="@+id/tab_user"
                android:text="@string/tab_user"
                android:textSize="16sp"
                android:textColor="@drawable/tab_text"
                android:background="@drawable/tab_background"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:button="@null" />
        </RadioGroup>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>