<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/wrapper">

    <FrameLayout
        android:id="@+id/toolbar_list"
        android:background="@color/yd_blue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar">

        <TextView
            android:text="@string/title_following"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-bold"
            android:textSize="@dimen/text_size_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_list"
        android:background="@color/white"
        android:divider="@drawable/list_divider_gray"
        tools:listitem="@layout/item_scholar" />

    <RelativeLayout
        android:id="@+id/toolbar_profile"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:clickable="true"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/toolbar_profile_back"
            android:layout_width="@dimen/height_toolbar"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:padding="15dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="33dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_light_blue_oval">

            <TextView
                style="@style/TextViewProfileToolbarTitle"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/bg_yd_blue_oval"
                android:text="@string/toolbar_bio"
                android:textColor="@color/white" />

            <TextView
                style="@style/TextViewProfileToolbarTitle"
                android:layout_alignParentRight="true"
                android:text="@string/toolbar_details"
                android:textColor="@color/yd_blue" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/wrapper_profile_details"
        android:layout_marginTop="@dimen/height_profile_picture_with_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:visibility="invisible"
        android:clickable="true">

        <TextView
            android:id="@+id/text_view_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:text="SOPHIA"
            android:fontFamily="sans-serif-light"
            android:textSize="32sp"
            android:layout_margin="10dp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/text_view_profile_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                tools:text="@string/lorem_ipsum_long"
                android:fontFamily="sans-serif"
                android:textSize="18sp" />

        </ScrollView>

    </LinearLayout>


</RelativeLayout>
